# traefik_crowdsec_bouncer

./: .gitignore  BENCHMARKING.md  BENCHMARK_QUICKSTART.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  coverage.yml
benches/: authentication.rs
examples/: load_test.rs
src/: bouncer.rs  config.rs  constants.rs  crowdsec.rs  errors.rs  lib.rs  main.rs  types.rs  utils.rs
src/bouncer/: tests.rs
src/config/: tests.rs
src/crowdsec/: tests.rs
src/utils/: tests.rs
